--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "eslint": "eslint .",
-    "test:ci": "react-scripts test --watchAll=false"
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
