--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.2.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
